deployment/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ataloud-frontend-service
  namespace: nexus
spec:
  selector:
    app: ataloud-frontend
  ports:
  - port: 8080
    targetPort: 8080
