deployment/route.yaml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: ataloud-frontend
spec:
  to:
    kind: Service
    name: ataloud-frontend-service
    weight: 100
  port:
    targetPort: 8080
  wildcardPolicy: None
